Phase 5: one formatting pass with google-java-format (AOSP style)
Every hand-written Java source (modules, tests, builder/Tasks.java) is
formatted once with google-java-format 1.36.1 in AOSP style: 4-space
indentation, 100 columns, sorted imports, no unused imports. New tasks:
"bld format" applies it, "bld format-check" fails when a source is not
formatted. This commit is formatting only; the generated parser and the
grammar are untouched.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Gz8T2SVANtwQF8a95PSWhv